Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16381

soft_sync_limit lprocfs write handler returns the wrong value

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      "echo 1 > /sys/fs/lustre/obdfilter/lustre-OST0000/soft_sync_limit" hangs forever:

       

      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0
      write(1, "1\n", 2)                      = 0

            panda Andrew Perepechko
            panda Andrew Perepechko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: