LU-16381 ofd: fix soft_sync_limit lprocfs write handler

soft_sync_limit_store() must return the size of the input buffer
in the success case, otherwise the writer may loop forever.

Change-Id: I2d926eaba7062c495a56c6ee32e1b82e08df63ce
Signed-off-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/49362
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>